// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinInput /> should render textinput 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with animated 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with centered 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with contrast 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with custom caption 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      forwardedRef={[Function]}
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "height": 88,
          "justifyContent": "center",
          "position": "relative",
          "width": 380.2857142857143,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "margin": 0,
            "position": "absolute",
          }
        }
      >
        <View
          forwardedRef={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 40.85714285714286,
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          forwardedRef={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 40.85714285714286,
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          forwardedRef={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 40.85714285714286,
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          forwardedRef={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 40.85714285714286,
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <TextInput
        allowFontScaling={true}
        autoFocus={false}
        caretHidden={true}
        disableFullscreenUI={true}
        editable={true}
        keyboardType="numeric"
        maxLength={4}
        numberOfLines={1}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        selection={
          Object {
            "end": 0,
            "start": 0,
          }
        }
        spellCheck={false}
        style={
          Object {
            "flex": 1,
            "opacity": 0,
            "textAlign": "center",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>,
  <Text
    accessibility="test"
    accessibilityLabel="test"
    centered={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 16,
          "lineHeight": 22.5,
        },
        Object {
          "fontWeight": "300",
          "opacity": 0.67,
          "textAlign": "left",
        },
      ]
    }
    testID="test"
    variant="xs"
  >
    test
  </Text>,
]
`;

exports[`<PinInput /> should render textinput with custom code length 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 575.1428571428571,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={6}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with custom error message 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      forwardedRef={[Function]}
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "height": 88,
          "justifyContent": "center",
          "position": "relative",
          "width": 380.2857142857143,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "margin": 0,
            "position": "absolute",
          }
        }
      >
        <View
          forwardedRef={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 40.85714285714286,
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          forwardedRef={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 40.85714285714286,
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          forwardedRef={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 40.85714285714286,
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          forwardedRef={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 40.85714285714286,
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <TextInput
        allowFontScaling={true}
        autoFocus={false}
        caretHidden={true}
        disableFullscreenUI={true}
        editable={true}
        keyboardType="numeric"
        maxLength={4}
        numberOfLines={1}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        selection={
          Object {
            "end": 0,
            "start": 0,
          }
        }
        spellCheck={false}
        style={
          Object {
            "flex": 1,
            "opacity": 0,
            "textAlign": "center",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>,
  <Text
    accessibility="Erro testError"
    accessibilityLabel="Erro testError"
    centered={false}
    large={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 16,
          "lineHeight": 22.5,
        },
        Object {
          "color": "#cc0000",
          "marginTop": 12,
          "textAlign": "left",
        },
      ]
    }
    testID="error_form_error"
    variant="xs"
  >
    testError
  </Text>,
]
`;

exports[`<PinInput /> should render textinput with custom ful fill 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with custom mask 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with error 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with password 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "marginLeft": 20,
      }
    }
  >
    <View
      accessibilityLabel="Exibir ou ocultar inputs - eye"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="Exibir ou ocultar inputs - eye"
    >
      <View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#C6B09E",
                "fontSize": 37.714285714285715,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰈈
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          t
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          e
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          s
        </Text>
      </View>
      <View
        forwardedRef={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderColor": undefined,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 40.85714285714286,
              },
              Object {},
            ]
          }
        >
          t
        </Text>
      </View>
    </View>
    <TextInput
      allowFontScaling={true}
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      selection={
        Object {
          "end": 7,
          "start": 7,
        }
      }
      spellCheck={false}
      style={
        Object {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      underlineColorAndroid="transparent"
      value="testing"
    />
  </View>
</View>
`;
